Node text: fix alignment of text in nodes

--- a/style/graph/graph_styles.css
+++ b/style/graph/graph_styles.css
@@ -35,6 +35,7 @@ g text
   -moz-user-select      : none;
   -ms-user-select       : none;
   text-anchor           : middle;
+  dominant-baseline     : central;
 }
 
 g.node
